// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:anchorNav 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav __PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav--vertical"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link-wrap linksWrap"
              role="anchorlist"
            >
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link is-active"
              >
                <a
                  title="基本信息"
                >
                  基本信息
                </a>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link"
              >
                <a
                  title="工作信息"
                >
                  工作信息
                </a>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link"
              >
                <a
                  title="兴趣爱好"
                >
                  兴趣爱好
                </a>
              </li>
            </ul>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section-wrap sectionsWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="0"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          基本信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="name"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                姓名：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="name"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="email"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                邮箱：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="email"
                              placeholder=""
                              size="10"
                              type="email"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="1"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          工作信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="cname"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                公司名称：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="caddress"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                公司地址：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="2"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          兴趣爱好
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="interest1"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                兴趣爱好1：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest1"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="interest2"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                兴趣爱好2：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest2"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="interest3"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                兴趣爱好3：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest3"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="interest4"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                兴趣爱好4：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest4"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="interest5"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                兴趣爱好5：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest5"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="interest6"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                兴趣爱好6：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest6"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:anchorNav with children 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav __PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav--horizontal"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link-wrap"
              role="anchorlist"
            >
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link is-active"
              >
                <a
                  title="基本信息"
                >
                  基本信息
                </a>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link __PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link-child"
              >
                <a
                  title="基本信息1-1"
                >
                  基本信息1-1
                </a>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link __PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link-child"
              >
                <a
                  title="基本信息1-2"
                >
                  基本信息1-2
                </a>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link"
              >
                <a
                  title="工作信息"
                >
                  工作信息
                </a>
              </li>
            </ul>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section-wrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="0"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          基本信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="name"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                姓名：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="name"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="email"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                邮箱：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="email"
                              placeholder=""
                              size="10"
                              type="email"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="0-0"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          基本信息1-1
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="cname1"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                cname1
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname1"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="caddress1"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                caddress1
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress1"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="0-1"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          基本信息1-2
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="cname2"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                cname2
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname2"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="caddress2"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                caddress2
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress2"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="1"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          工作信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="cname"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                公司名称：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="caddress"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                公司地址：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:anchorNav with horizontal 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav __PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav--horizontal"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link-wrap"
              role="anchorlist"
            >
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-link is-active"
              >
                <a
                  title="基本信息"
                >
                  基本信息
                </a>
              </li>
            </ul>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section-wrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AnchorNav-section"
                data-id="0"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
                  data-role="container"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
                  >
                    <h3
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          基本信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
                  >
                    <form
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="name"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                姓名：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="name"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                        data-amis-name="email"
                        data-role="form-item"
                      >
                        <label
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                        >
                          <span>
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                邮箱：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="email"
                              placeholder=""
                              size="10"
                              type="email"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
